Fix text overflow bug for task name textbox

--- a/src/modules/components/addTaskCard/addTaskCard.css
+++ b/src/modules/components/addTaskCard/addTaskCard.css
@@ -1,4 +1,5 @@
 .add-task-card {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -7,20 +8,17 @@
     padding: 10px;
 }
 
-/* .add-task-card > :first-child {
+.add-task-card > :first-child {
+    width: 100%;
     border: none;
     outline: none;
-    resize: none;
     font-weight: 900;
-} */
-
-.add-task-card > :first-child {
-    display: block;
-    width: 100%;
-    overflow: hidden;
-    resize: both;
 }
 
+.add-task-card > :first-child[contenteditable]:empty:before {
+    content: "Task name";
+    color: #8e8e8e;
+}
 
 .add-task-card > :nth-child(2) {
     border: none;
