--- a/src/modules/components/inboxPage/inboxPage.css
+++ b/src/modules/components/inboxPage/inboxPage.css
@@ -2,18 +2,25 @@
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.inbox-content {
+    display: flex;
     flex-direction: column;
     gap: 50px;
-    padding: 20px 20%;
-    /* Fix issue with extra space on the side when adding padding */
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;         /* Opera/IE 8+ */
+    width: 60%;
+    padding: 20px 0;
 }
 
 .inbox-header {
     font-size: 20px;
     font-weight: 900;
+}
+
+.priority-section {
+    width: 100%;
 }
 
 .priority-header {
