--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,15 @@
-*{
-    box-sizing: border-box;   
+* {
+    /* Fix issue with extra space on the side when adding padding */
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 body {
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: 300px 1fr;
+    grid-template-columns: 300px minmax(0, 1fr);
     grid-template-rows: max-content 1fr;
     min-height: 100vh;
 }
